--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 ATLAS_URI=mongodb+srv://zackDB:fuckyou123@forumdb-f7qgp.gcp.mongodb.net/test?retryWrites=true&w=majority
+useed=QqeZLruktqPMJ3OR
+pseed=WUEilrC9oms6omHx
+eseed=1THmsmStTKtcbi98
+hash=sha256
+NODE_ENV=development
+SESS_SECRET=undefined
+SESS_LIFETIME=43200000
+KEY=3941434813
