--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "create-react-class": "^15.6.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "sanitize-html": "^1.22.1"
   },
   "scripts": {
