--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ ATLAS_URI=mongodb+srv://zackDB:fuckyou123@forumdb-f7qgp.gcp.mongodb.net/test?ret
 useed=QqeZLruktqPMJ3OR
 pseed=WUEilrC9oms6omHx
 eseed=1THmsmStTKtcbi98
+jwtseed=2278951392
 hash=sha256
 NODE_ENV=development
 SESS_SECRET=undefined
