--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.5"
+    "mongoose": "^5.9.5",
+    "react-recaptcha": "^2.3.10"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
