--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "create-react-class": "^15.6.3",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "minimist": "^1.2.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
