--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ZackFra/test_forum.git"
+    "url": "git+https://github.com/ZackFra/HackThisMEANSite.git"
   },
   "keywords": [],
   "author": "",
