--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sanitize-html": "^1.22.1"
+    "sanitize-html": "^1.22.1",
+    "uuid4": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
