--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "create-react-class": "^15.6.3",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "minimist": "^1.2.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-recaptcha": "^2.0.1",
@@ -20,11 +19,12 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sanitize-html": "^1.22.1",
+    "updates": "^10.2.10",
     "uuid4": "^1.1.4"
   },
   "scripts": {
