--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "react-recaptcha": "^2.3.10"
+    "react-recaptcha": "^2.3.10",
+    "updates": "^10.2.10"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
