--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
     "react-recaptcha": "^2.3.10",
+    "sanitize-html": "^1.23.0",
     "updates": "^10.2.10"
   },
   "devDependencies": {
