--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
+    "react-app-polyfill": "^1.0.6",
     "react-recaptcha": "^2.3.10",
     "sanitize-html": "^1.23.0",
     "updates": "^10.2.10"
